Add registration and reset intents, allow phase 1 accounts to set password, add separate flag for disabling email auth, misc fixes
